--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -8,7 +8,7 @@
 }
 
 .Home-logo {
-  animation: App-logo-spin infinite 1s linear;
+  animation: heartbeat 1.5s ease-in-out infinite both;
   height: 40vmin;
 }
 
@@ -24,12 +24,38 @@
 }
 
 
-@keyframes App-logo-spin {
+@keyframes heartbeat {
   from {
-    transform: rotate(0deg);
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: center center;
+            transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
-  to {
-    transform: rotate(360deg);
+  10% {
+    -webkit-transform: scale(0.91);
+            transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+            transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+            transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
   }
 }
 
